feat: update cv, remove old papers

--- a/assets/publications.bib
+++ b/assets/publications.bib
@@ -1,109 +1,8 @@
-@article{chrcanovic2021,
-  title = {Exercise Therapy for Whiplash-Associated Disorders: A Systematic Review and Meta-Analysis},
-  shorttitle = {Exercise Therapy for Whiplash-Associated Disorders},
-  author = {Chrcanovic, Bruno and Larsson, Johan and Malmström, Eva-Maj and Westergren, Hans and Häggman-Henrikson, Birgitta},
-  Author+an = {2=highlight},
-  date = {2021-09-27},
-  journaltitle = {Scandinavian Journal of Pain},
-  publisher = {{De Gruyter}},
-  issn = {1877-8879},
-  doi = {10.1515/sjpain-2021-0064},
-  url = {https://www.degruyter.com/document/doi/10.1515/sjpain-2021-0064/html},
-  urldate = {2021-09-28},
-  abstract = {Objectives Acute as well as chronic pain syndromes are common after whiplash trauma and exercise therapy is proposed as one possible intervention strategy. The aim of the present systematic review was to evaluate the effect of exercise therapy in patients with Whiplash-Associated Disorders for the improvement of neck pain and neck disability, compared with other therapeutic interventions, placebo interventions, no treatment, or waiting list. Content The review was registered in Prospero (CRD42017060356) and conducted in accordance with the PRISMA (Preferred Reporting Items for Systematic Reviews and Meta-Analyses) guidelines. A literature search in PubMed, Scopus and Cochrane from inception until January 13, 2020 was combined with a hand search to identify eligible randomized controlled studies. Abstract screening, full text assessment and risk of bias assessment (Cochrane RoB 2.0) were conducted by two independent reviewers. Summary The search identified 4,103 articles. After removal of duplicates, screening of 2,921 abstracts and full text assessment of 100 articles, 27 articles that reported data for 2,127 patients were included. The included articles evaluated the effect of exercise therapy on neck pain, neck disability or other outcome measures and indicated some positive effects from exercise, but many studies lacked control groups not receiving active treatment. Studies on exercise that could be included in the random-effect meta-analysis showed significant short-term effects on neck pain and medium-term effects on neck disability. Outlook Despite a large number of articles published in the area of exercise therapy and Whiplash-Associated Disorders, the current evidence base is weak. The results from the present review with meta-analysis suggests that exercise therapy may provide additional effect for improvement of neck pain and disability in patients with Whiplash-Associated Disorders.},
-  langid = {english},
-  keywords = {published-article}
-}
-% == BibLateX quality report for chrcanovic2021:
-% Unexpected field 'publisher'
-% ? Unused libraryCatalog: www.degruyter.com
-% ? Unused rights: All rights reserved
-% ? Unused version: 5164
-
-@article{akerblom2019,
-  title      = {Acceptance: A Factor to Consider in Persistent Pain after Neck Trauma},
-  shorttitle = {Acceptance},
-  author     = {Åkerblom, Sophia and Larsson, Johan and Malmström,
-                Eva-Maj and Persson, Elisabeth and Westergren, Hans},
-  Author+an  = {2=highlight},
-  year       = {2019},
-  volume     = {19},
-  pages      = {733--741},
-  issn       = {1877-8879},
-  doi        = {10.1515/sjpain-2019-0021},
-  copyright  = {All rights reserved},
-  journal    = {Scandinavian Journal of Pain},
-  number     = {4},
-  keywords   = {published-article}
-}
-
-@article{larsson2015,
-  title     = {Increased Double Support Variability in Elderly Female Fallers with Vestibular Asymmetry},
-  author    = {Larsson, Johan and Ekvall Hansson, Eva and Miller, Michael},
-  Author+an = {1=highlight},
-  year      = {2015},
-  month     = mar,
-  volume    = {41},
-  pages     = {820--824},
-  issn      = {1879-2219},
-  doi       = {10.1016/j.gaitpost.2015.02.019},
-  copyright = {All rights reserved},
-  journal   = {Gait \& Posture},
-  language  = {eng},
-  number    = {3},
-  pmid      = {25800649},
-  keywords  = {published-article}
-}
-
-@article{larsson2016c,
-  title = {Vestibular Asymmetry Increases Double Support Time Variability in a Counter-Balanced Study on Elderly Fallers},
-  author = {Larsson, Johan and Miller, Michael and Ekvall Hansson, Eva},
-  Author+an = {1=highlight},
-  year = {2016},
-  month = mar,
-  volume = {45},
-  pages = {31--34},
-  issn = {0966-6362},
-  doi = {10.1016/j.gaitpost.2015.12.023},
-  copyright = {All rights reserved},
-  journal = {Gait \& Posture},
-  keywords = {published-article}
-}
-% == BibTeX quality report for larsson2016c:
-% Missing required field 'number'
-
-@inproceedings{larsson2016d,
-  title = {Pain Distribution after Neck Traumas: An Analysis of 745 Consecutive Patients with Persistent Neck Pain},
-  booktitle = {{{IASP}} 2016: {{The World Congress}} on {{Pain}}},
-  author = {Larsson, Johan and Westergren, Hans and Malmstr{\"o}m, Eva-Maj},
-  Author+an = {1=highlight},
-  editor = {{IASP}},
-  year = {2016},
-  month = sep,
-  address = {{Yokohama, Japan}},
-  copyright = {All rights reserved},
-  keywords = {conference-abstract}
-}
-% == BibTeX quality report for larsson2016d:
-% Missing required field 'pages'
-% Missing required field 'publisher'
-
-@phdthesis{larsson2017b,
-  title = {Gym-Based Exercise Therapy for Patients with Persistent Neck Pain: A Research Protocol for a Randomized Controlled Trial},
-  author = {Larsson, Johan},
-  Author+an = {1=highlight},
-  year = {2017},
-  month = jan,
-  address = {{Lund, Sweden}},
-  copyright = {All rights reserved},
-  school = {Lund university},
-  type = {Master's Thesis},
-  keywords = {thesis}
-}
-
 @inproceedings{larsson2018,
-  title = {A Case Study in Fitting Area-Proportional {{Euler}} Diagrams with Ellipses Using {eulerr}},
-  booktitle = {Proceedings of {{International Workshop}} on {{Set Visualization}} and {{Reasoning}}},
+  title = {A Case Study in Fitting Area-Proportional {{Euler}} Diagrams with
+           Ellipses Using {eulerr}},
+  booktitle = {Proceedings of {{International Workshop}} on {{Set Visualization}
+               } and {{Reasoning}}},
   author = {Larsson, Johan and Gustafsson, Peter},
   Author+an = {1=highlight},
   year = {2018},
@@ -113,7 +12,7 @@
   publisher = {{CEUR Workshop Proceedings}},
   address = {{Edinburgh, United Kingdom}},
   copyright = {All rights reserved},
-  keywords = {published-article}
+  keywords = {published-article},
 }
 
 @thesis{larsson2018a,
@@ -124,199 +23,197 @@
   institution = {{Lund University}},
   location = {{Lund, Sweden}},
   url = {http://lup.lub.lu.se/student-papers/record/8934042},
-  abstract = {Euler diagrams are common and intuitive visualizations for data involving sets and relationships thereof. Compared to Venn diagrams, Euler diagrams do not require all set relationships to be present and may therefore be area-proportional also with subset or disjoint relationships in the input. Most Euler diagrams use circles, but circles do not always support accurate diagrams. A promising alternative for Euler diagrams is ellipses, which enable accurate diagrams for a wider range of set combinations. Ellipses, however, have not yet been implemented for more than three sets or three-set diagrams where there are disjoint or subset relationships. The aim of this thesis is to present a method and software for elliptical Euler diagrams for any number of sets. In this thesis, we provide and outline an R-based implementation called eulerr. It fits Euler diagrams using numerical optimization and exact-area algorithms through two steps: first, an initial layout is formed using the sets' pairwise relationships; second, this layout is finalized taking all the sets' intersections into account. Finally, we compare eulerr with other software implementations of Euler diagrams and show that the package is overall both more consistent and accurate as well as faster for up to seven sets compared to the other R-packages. eulerr perfectly reproduces samples of circular Euler diagrams as well as three-set diagrams with ellipses, but performs suboptimally with elliptical diagrams of more than three sets. eulerr also outperforms the other software tested in this thesis in fitting Euler diagrams to set configurations that might lack exact solutions provided that we use ellipses; eulerr's circular diagrams, meanwhile, fit better on all accounts save for the diagError metric in the case of three-set diagrams.},
+  abstract = {Euler diagrams are common and intuitive visualizations for data
+              involving sets and relationships thereof. Compared to Venn diagrams
+              , Euler diagrams do not require all set relationships to be present
+              and may therefore be area-proportional also with subset or disjoint
+              relationships in the input. Most Euler diagrams use circles, but
+              circles do not always support accurate diagrams. A promising
+              alternative for Euler diagrams is ellipses, which enable accurate
+              diagrams for a wider range of set combinations. Ellipses, however,
+              have not yet been implemented for more than three sets or three-set
+              diagrams where there are disjoint or subset relationships. The aim
+              of this thesis is to present a method and software for elliptical
+              Euler diagrams for any number of sets. In this thesis, we provide
+              and outline an R-based implementation called eulerr. It fits Euler
+              diagrams using numerical optimization and exact-area algorithms
+              through two steps: first, an initial layout is formed using the
+              sets' pairwise relationships; second, this layout is finalized
+              taking all the sets' intersections into account. Finally, we
+              compare eulerr with other software implementations of Euler
+              diagrams and show that the package is overall both more consistent
+              and accurate as well as faster for up to seven sets compared to the
+              other R-packages. eulerr perfectly reproduces samples of circular
+              Euler diagrams as well as three-set diagrams with ellipses, but
+              performs suboptimally with elliptical diagrams of more than three
+              sets. eulerr also outperforms the other software tested in this
+              thesis in fitting Euler diagrams to set configurations that might
+              lack exact solutions provided that we use ellipses; eulerr's
+              circular diagrams, meanwhile, fit better on all accounts save for
+              the diagError metric in the case of three-set diagrams.},
   editora = {Gustafsson, Peter},
   editoratype = {collaborator},
   pagetotal = {33},
   type = {Bachelor thesis},
-  keywords = {thesis}
-}
-% == BibLateX quality report for larsson2018a:
-% Unexpected field 'editora'
-% Unexpected field 'editoratype'
-
-@article{larsson2018b,
-  title = {Mapping Physical Therapy Research: The Geographical Affiliations and Methodological Quality of 2,959 Randomized Controlled Trials},
-  shorttitle = {Mapping Physical Therapy Research},
-  author = {Larsson, Johan},
-  Author+an = {1=highlight},
-  year = {2018},
-  month = jan,
-  volume = {34},
-  pages = {723--729},
-  issn = {1532-5040},
-  doi = {10.1080/09593985.2018.1423657},
-  copyright = {All rights reserved},
-  journal = {Physiotherapy Theory and Practice},
-  number = {9},
-  keywords = {published-article}
+  keywords = {thesis},
 }
 
 @misc{larsson2018c,
-  title = {Polylabelr: Find the Pole of Inaccessibility (Visual Center) of a Polygon},
+  title = {Polylabelr: Find the Pole of Inaccessibility (Visual Center) of a
+           Polygon},
   author = {Larsson, Johan},
   Author+an = {1=highlight},
   year = {2018},
   copyright = {All rights reserved},
-  keywords = {software}
-}
-% == BibTeX quality report for larsson2018c:
-% Missing required field 'howpublished'
-
-@article{larsson2020a,
-  title = {The Feasibility of Gym-Based Exercise Therapy for Patients with Persistent Neck Pain},
-  author = {Larsson, Johan and Westergren, Hans and {H{\"a}ggman-Henrikson}, Birgitta and Ilgunas, Aurelija and W{\"a}nman, Anders and Malmstr{\"o}m, Eva-Maj},
-  Author+an = {1=highlight},
-  year = {2020},
-  month = apr,
-  volume = {20},
-  pages = {261--272},
-  issn = {1877-8879},
-  doi = {10.1515/sjpain-2019-0085},
-  copyright = {All rights reserved},
-  journal = {Scandinavian Journal of Pain},
-  number = {2},
-  keywords = {published-article}
-}
-
-
-@online{larsson2020b,
-  title = {The Strong Screening Rule for {{SLOPE}}},
-  author = {Larsson, Johan and Bogdan, Małgorzata and Wallin, Jonas},
-  Author+an = {1=highlight},
-  date = {2020-05-07},
-  eprint = {2005.03730},
-  eprinttype = {arxiv},
-  primaryclass = {cs, stat},
-  url = {http://arxiv.org/abs/2005.03730},
-  urldate = {2020-05-17},
-  abstract = {Extracting relevant features from data sets where the number of observations (\$n\$) is much smaller then the number of predictors (\$p\$) is a major challenge in modern statistics. Sorted L-One Penalized Estimation (SLOPE), a generalization of the lasso, is a promising method within this setting. Current numerical procedures for SLOPE, however, lack the efficiency that respective tools for the lasso enjoy, particularly in the context of estimating a complete regularization path. A key component in the efficiency of the lasso is predictor screening rules: rules that allow predictors to be discarded before estimating the model. This is the first paper to establish such a rule for SLOPE. We develop a screening rule for SLOPE by examining its subdifferential and show that this rule is a generalization of the strong rule for the lasso. Our rule is heuristic, which means that it may discard predictors erroneously. We present conditions under which this may happen and show that such situations are rare and easily safeguarded against by a simple check of the optimality conditions. Our numerical experiments show that the rule performs well in practice, leading to improvements by orders of magnitude for data in the \$p \textbackslash gg n\$ domain, as well as incurring no additional computational overhead when \$n \textbackslash gg p\$. We also examine the effect of correlation structures in the design matrix on the rule and discuss algorithmic strategies for employing the rule. Finally, we provide an efficient implementation of the rule in our R package SLOPE.},
-  archiveprefix = {arXiv},
-  keywords = {unpublished-article}
-}
-
-@phdthesis{najafi2014,
-  title = {The Professional Role and Technology Use among Physical Therapists in {{Tokyo}}: A Qualitative Interview Study},
-  shorttitle = {The Professional Role and Technology Use among Physical Therapists in {{Tokyo}}},
-  author = {Najafi, David and Larsson, Johan},
-  Author+an = {2=highlight},
-  year = {2014},
-  address = {{Lund, Sweden}},
-  copyright = {All rights reserved},
-  school = {Lund University},
-  type = {Bachelor Thesis},
-  keywords = {thesis}
-}
-
-@inproceedings{westergren2015,
-  title = {Pain Distribution in 745 Consecutive Patients with Persistent Pain after Whiplash Trauma},
-  booktitle = {{{EFIC}} 2015: {{Translating}} Evidence into Practice},
-  author = {Westergren, Hans and Larsson, Johan and Malmstr{\"o}m, Eva-Maj},
-  Author+an = {2=highlight},
-  editor = {{EFIC}},
-  year = {2015},
-  month = sep,
-  address = {{Vienna, Austria}},
-  copyright = {All rights reserved},
-  keywords = {conference-abstract}
-}
-% == BibTeX quality report for westergren2015:
-% Missing required field 'pages'
-% Missing required field 'publisher'
-
-@article{westergren2017,
-  title = {Sex-Based Differences in Pain Distribution in a Cohort of Patients with Persistent Post-Traumatic Neck Pain},
-  author = {Westergren, Hans and Larsson, Johan and Freeman, Michael and Carlsson, Anna and J{\"o}ud, Anna and Malmstr{\"o}m, Eva-Maj},
-  Author+an = {2=highlight},
-  year = {2017},
-  month = jan,
-  volume = {40},
-  pages = {1085--1091},
-  doi = {10.1080/09638288.2017.1280543},
-  copyright = {All rights reserved},
-  journal = {Disability and Rehabilitation},
-  language = {en},
-  number = {9},
-  keywords = {published-article}
+  keywords = {software},
 }
 
 @inproceedings{larsson2020c,
   title = {The Strong Screening Rule for {{SLOPE}}},
   booktitle = {Advances in {{Neural Information Processing Systems}} 33},
   author = {Larsson, Johan and Bogdan, Malgorzata and Wallin, Jonas},
-  editor = {Larochelle, H. and Ranzato, M. and Hadsell, R. and Balcan, M. F. and Lin, H.},
+  editor = {Larochelle, H. and Ranzato, M. and Hadsell, R. and Balcan, M. F. and
+            Lin, H.},
   Author+an = {1=highlight},
   date = {2020-12-06/0012},
   volume = {33},
   pages = {14592--14603},
   publisher = {{Curran Associates, Inc.}},
   location = {{Virtual}},
-  url = {https://proceedings.neurips.cc/paper/2020/file/a7d8ae4569120b5bec12e7b6e9648b86-Paper.pdf},
-  abstract = {Extracting relevant features from data sets where the number of observations n is much smaller then the number of predictors p is a major challenge in modern statistics. Sorted L-One Penalized Estimation (SLOPE)—a generalization of the lasso---is a promising method within this setting. Current numerical procedures for SLOPE, however, lack the efficiency that respective tools for the lasso enjoy, particularly in the context of estimating a complete regularization path. A key component in the efficiency of the lasso is predictor screening rules: rules that allow  predictors to be discarded before estimating the model. This is the first paper to establish such a rule for SLOPE. We develop a screening rule for SLOPE by examining its subdifferential and show that this rule is a generalization of the strong rule for the lasso. Our rule is heuristic, which means that it may discard predictors erroneously. In our paper, however, we show that such situations are rare and easily safeguarded against by a simple check of the optimality conditions. Our numerical experiments show that the rule performs well in practice, leading to improvements by orders of magnitude for data in the p {$>>$} n domain, as well as incurring no additional computational overhead when n {$>$} p.},
+  url = {
+         https://proceedings.neurips.cc/paper/2020/file/a7d8ae4569120b5bec12e7b6e9648b86-Paper.pdf
+         },
+  abstract = {Extracting relevant features from data sets where the number of
+              observations n is much smaller then the number of predictors p is a
+              major challenge in modern statistics. Sorted L-One Penalized
+              Estimation (SLOPE)—a generalization of the lasso---is a promising
+              method within this setting. Current numerical procedures for SLOPE,
+              however, lack the efficiency that respective tools for the lasso
+              enjoy, particularly in the context of estimating a complete
+              regularization path. A key component in the efficiency of the lasso
+              is predictor screening rules: rules that allow predictors to be
+              discarded before estimating the model. This is the first paper to
+              establish such a rule for SLOPE. We develop a screening rule for
+              SLOPE by examining its subdifferential and show that this rule is a
+              generalization of the strong rule for the lasso. Our rule is
+              heuristic, which means that it may discard predictors erroneously.
+              In our paper, however, we show that such situations are rare and
+              easily safeguarded against by a simple check of the optimality
+              conditions. Our numerical experiments show that the rule performs
+              well in practice, leading to improvements by orders of magnitude
+              for data in the p {$>>$} n domain, as well as incurring no
+              additional computational overhead when n {$>$} p.},
   eventtitle = {Neural {{Information Procession Systems}} 2020},
   langid = {english},
-  keywords = {published-article}
+  keywords = {published-article},
 }
 % == BibLateX quality report for larsson2020c:
 % ? Unsure about the formatting of the booktitle
 
 @inproceedings{larsson2021b,
-  title      = {Look-Ahead Screening Rules for the Lasso},
-  booktitle  = {22nd {{European Young Statisticians Meeting}} -- {{Proceedings}}},
-  author     = {Larsson, Johan},
-  Author+an  = {1=highlight},
-  editor     = {{Andreas Makridis} and {Fotios S. Milienos} and {Panagiotis Papastamoulis} and {Christina Parpoula} and {Athanasios Rakitzis}},
-  date       = {2021-09-06/2021-09-10},
-  pages      = {61--65},
-  publisher  = {{Panteion University of Social and Political Sciences}},
-  location   = {{Athens, Greece}},
-  url        = {https://www.eysm2021.panteion.gr/files/Proceedings_EYSM_2021.pdf},
-  abstract   = {The lasso is a popular method to induce shrinkage and sparsity in the solution vector (coefficients) of regression problems, particularly when there are many predictors relative to the number of observations. Solving the lasso in this high-dimensional setting can, however, be computationally demanding. Fortunately, this demand can be alleviated via the use of screening rules that discard predictors prior to fitting the model, leading to a reduced problem to be solved. In this paper, we present a new screening strategy: look-ahead screening. Our method uses safe screening rules to find a range of penalty values for which a given predictor cannot enter the model, thereby screening predictors along the remainder of the path. In experiments we show that these look-ahead screening rules outperform the active warm-start version of the Gap Safe rules.},
-  eventtitle = {22nd {{European Young Statisticians Meeting}}},
-  isbn       = {978-960-7943-23-1},
-  langid     = {english},
-  keywords   = {published-article}
-}
-
-@online{larsson2021a,
   title = {Look-Ahead Screening Rules for the Lasso},
+  booktitle = {22nd {{European Young Statisticians Meeting}} -- {{Proceedings}}},
   author = {Larsson, Johan},
   Author+an = {1=highlight},
-  date = {2021-06-29},
-  eprint = {2105.05648},
-  eprinttype = {arxiv},
-  primaryclass = {cs, stat},
-  url = {http://arxiv.org/abs/2105.05648},
-  urldate = {2021-09-14},
-  abstract = {The lasso is a popular method to induce shrinkage and sparsity in the solution vector (coefficients) of regression problems, particularly when there are many predictors relative to the number of observations. Solving the lasso in this high-dimensional setting can, however, be computationally demanding. Fortunately, this demand can be alleviated via the use of screening rules that discard predictors prior to fitting the model, leading to a reduced problem to be solved. In this paper, we present a new screening strategy: look-ahead screening. Our method uses safe screening rules to find a range of penalty values for which a given predictor cannot enter the model, thereby screening predictors along the remainder of the path. In experiments we show that these look-ahead screening rules outperform the active warm-start version of the Gap Safe rules.},
-  archiveprefix = {arXiv},
-  keywords = {unpublished-article}
+  editor = {{Andreas Makridis} and {Fotios S. Milienos} and {Panagiotis
+            Papastamoulis} and {Christina Parpoula} and {Athanasios Rakitzis}},
+  date = {2021-09-06/2021-09-10},
+  pages = {61--65},
+  publisher = {{Panteion University of Social and Political Sciences}},
+  location = {{Athens, Greece}},
+  url = {https://www.eysm2021.panteion.gr/files/Proceedings_EYSM_2021.pdf},
+  abstract = {The lasso is a popular method to induce shrinkage and sparsity in
+              the solution vector (coefficients) of regression problems,
+              particularly when there are many predictors relative to the number
+              of observations. Solving the lasso in this high-dimensional setting
+              can, however, be computationally demanding. Fortunately, this
+              demand can be alleviated via the use of screening rules that
+              discard predictors prior to fitting the model, leading to a reduced
+              problem to be solved. In this paper, we present a new screening
+              strategy: look-ahead screening. Our method uses safe screening
+              rules to find a range of penalty values for which a given predictor
+              cannot enter the model, thereby screening predictors along the
+              remainder of the path. In experiments we show that these look-ahead
+              screening rules outperform the active warm-start version of the Gap
+              Safe rules.},
+  eventtitle = {22nd {{European Young Statisticians Meeting}}},
+  isbn = {978-960-7943-23-1},
+  langid = {english},
+  keywords = {published-article},
 }
-% == BibLateX quality report for larsson2021a:
-% Unexpected field 'primaryclass'
-% Unexpected field 'archiveprefix'
-% ? Unused rights: All rights reserved
-% ? Unused version: 5158
 
-@online{larsson2021,
+@inproceedings{moreau2022a,
+  title = {Benchopt: Reproducible, Efficient and Collaborative Optimization
+           Benchmarks},
+  shorttitle = {Benchopt},
+  booktitle = {Advances in {{Neural Information Processing Systems}} 35},
+  author = {Moreau, Thomas and Massias, Mathurin and Gramfort, Alexandre and
+            Ablin, Pierre and Bannier, Pierre-Antoine and Charlier, Benjamin and
+            Dagréou, Mathieu and family=Tour, given=Tom Dupré, prefix=la,
+            useprefix=true and Durif, Ghislain and Dantas, Cassio F. and
+            Klopfenstein, Quentin and Larsson, Johan and Lai, En and Lefort,
+            Tanguy and Malézieux, Benoit and Moufad, Badr and Nguyen, Binh T. and
+            Rakotomamonjy, Alain and Ramzi, Zaccharie and Salmon, Joseph and
+            Vaiter, Samuel},
+  author+an = {10=highlight},
+  date = {2022-11-29},
+  volume = {35},
+  pages = {forthcoming},
+  publisher = {{Curran Associates, Inc.}},
+  location = {{New Orleans, USA}},
+  abstract = {Numerical validation is at the core of machine learning research
+              as it allows to assess the actual impact of new methods, and to
+              confirm the agreement between theory and practice. Yet, the rapid
+              development of the field poses several challenges: researchers are
+              confronted with a profusion of methods to compare, limited
+              transparency and consensus on best practices, as well as tedious
+              re-implementation work. As a result, validation is often very
+              partial, which can lead to wrong conclusions that slow down the
+              progress of research. We propose Benchopt, a collaborative
+              framework to automate, reproduce and publish optimization
+              benchmarks in machine learning across programming languages and
+              hardware architectures. Benchopt simplifies benchmarking for the
+              community by providing an off-the-shelf tool for running, sharing
+              and extending experiments. To demonstrate its broad usability, we
+              showcase benchmarks on three standard learning tasks: \$
+              \textbackslash ell\_2\$-regularized logistic regression, Lasso, and
+              ResNet18 training for image classification. These benchmarks
+              highlight key practical findings that give a more nuanced view of
+              the state-of-the-art for these problems, showing that for practical
+              evaluation, the devil is in the details. We hope that Benchopt will
+              foster collaborative work in the community hence improving the
+              reproducibility of research findings.},
+  eventtitle = {Neural {{Information Procession Systems}} 2022},
+  keywords = {published-article},
+}
+
+
+@inproceedings{larsson2022b,
   title = {The {{Hessian}} Screening Rule},
+  booktitle = {Advances in {{Neural Information Processing Systems}} 35},
   author = {Larsson, Johan and Wallin, Jonas},
   author+an = {1=highlight},
-  date = {2021-04-27},
-  eprint = {2104.13026},
-  eprinttype = {arxiv},
-  primaryclass = {cs, stat},
-  url = {http://arxiv.org/abs/2104.13026},
-  urldate = {2021-04-29},
-  abstract = {Predictor screening rules, which discard predictors from the design matrix before fitting a model, have had sizable impacts on the speed with which \$\textbackslash ell\_1\$-regularized regression problems, such as the lasso, can be solved. Current state-of-the-art screening rules, however, have difficulties in dealing with highly-correlated predictors, often becoming too conservative. In this paper, we present a new screening rule to deal with this issue: the Hessian Screening Rule. The rule uses second-order information from the model in order to provide more accurate screening as well as higher-quality warm starts. In our experiments on \$\textbackslash ell\_1\$-regularized least-squares (the lasso) and logistic regression, we show that the rule outperforms all other alternatives in simulated experiments with high correlation, as well as in the majority of real datasets that we study.},
-  archiveprefix = {arXiv},
-  keywords = {unpublished-article}
+  date = {2022-11-29},
+  volume = {35},
+  pages = {forthcoming},
+  publisher = {{Curran Associates, Inc.}},
+  location = {{New Orleans, USA}},
+  abstract = {Predictor screening rules, which discard predictors from the
+              design matrix before fitting a model, have had considerable impact
+              on the speed with which l1-regularized regression problems, such as
+              the lasso, can be solved. Current state-of-the-art screening rules,
+              however, have difficulties in dealing with highly-correlated
+              predictors, often becoming too conservative. In this paper, we
+              present a new screening rule to deal with this issue: the Hessian
+              Screening Rule. The rule uses second-order information from the
+              model to provide more accurate screening as well as higher-quality
+              warm starts. The proposed rule outperforms all studied alternatives
+              on data sets with high correlation for both l1-regularized
+              least-squares (the lasso) and logistic regression. It also performs
+              best overall on the real data sets that we examine.},
+  eventtitle = {Neural {{Information Procession Systems}} 2022},
+  langid = {english},
+  keywords = {published-article},
 }
-% == BibLateX quality report for larsson2021:
-% Unexpected field 'primaryclass'
-% Unexpected field 'archiveprefix'
-% ? Unused rights: All rights reserved
-% ? Unused version: 5131
-
 
 
